// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`email survey init method sets up pages correctly 1`] = `
"<form class="nhsuk-u-margin-top-3" method="post" action="/Survey/EmailSurveyCollection" data-survey-form="" target="_blank">
<input name="data-1" value="value-1">
<input name="data-2" value="value-2">

<div class="nhsuk-form-group nhsuk-u-margin-bottom-0" data-survey-form-section="">
    <p>We would like to know more about your experience using 111 online.</p>

    <p>We will send you a link to a survey in 2 days.</p>

    <p>This is so you can get the help you need before completing the survey.</p>

    <fieldset class="nhsuk-fieldset">
        <div class="nhsuk-form-group">
            <label class="nhsuk-label nhsuk-u-font-weight-bold" for="email">
                Enter your email address
            </label>
            <input class="nhsuk-input nhsuk-u-width-one-half" id="email" name="EmailAddress" type="email" inputmode="email">
        </div>
    </fieldset>

    <button class="nhsuk-button nhsuk-u-margin-top-4" data-email-survey-cancel="" type="submit">Send</button>
    <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4" data-email-survey-submit="" type="submit">Send</button>
    
</div>
</form>"
`;

exports[`email survey initSurvey method bails out if fetch is not present and leaves the form intact (in no-js mode) 1`] = `
"<form class="nhsuk-u-margin-top-3" method="post" action="/Survey/EmailSurveyCollection" data-survey-form="" target="_blank">
<input name="data-1" value="value-1">
<input name="data-2" value="value-2">

<div class="nhsuk-form-group nhsuk-u-margin-bottom-0" data-survey-form-section="">
    <p>We would like to know more about your experience using 111 online.</p>

    <p>We will send you a link to a survey in 2 days.</p>

    <p>This is so you can get the help you need before completing the survey.</p>

    <fieldset class="nhsuk-fieldset">
        <div class="nhsuk-form-group">
            <label class="nhsuk-label nhsuk-u-font-weight-bold" for="email">
                Enter your email address
            </label>
            <input class="nhsuk-input nhsuk-u-width-one-half" id="email" name="EmailAddress" type="email" inputmode="email">
        </div>
    </fieldset>

    <button class="nhsuk-button nhsuk-u-margin-top-4" data-email-survey-cancel="" type="submit">Send</button>
    <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4" data-email-survey-submit="" type="submit">Send</button>
    <p data-feedback-nojs-message="">(Opens in a new tab or window)</p>
</div>
</form>"
`;

exports[`email survey initSurvey method initialises survey class when form is present 1`] = `
"<form class="nhsuk-u-margin-top-3" method="post" action="/Survey/EmailSurveyCollection" data-survey-form="" target="_blank">
<input name="data-1" value="value-1">
<input name="data-2" value="value-2">

<div class="nhsuk-form-group nhsuk-u-margin-bottom-0" data-survey-form-section="">
    <p>We would like to know more about your experience using 111 online.</p>

    <p>We will send you a link to a survey in 2 days.</p>

    <p>This is so you can get the help you need before completing the survey.</p>

    <fieldset class="nhsuk-fieldset">
        <div class="nhsuk-form-group">
            <label class="nhsuk-label nhsuk-u-font-weight-bold" for="email">
                Enter your email address
            </label>
            <input class="nhsuk-input nhsuk-u-width-one-half" id="email" name="EmailAddress" type="email" inputmode="email">
        </div>
    </fieldset>

    <button class="nhsuk-button nhsuk-u-margin-top-4" data-email-survey-cancel="" type="submit">Send</button>
    <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4" data-email-survey-submit="" type="submit">Send</button>
    
</div>
</form>"
`;

exports[`email survey submitEmail method when data from response is invalid displays error content 1`] = `
"<form class="nhsuk-u-margin-top-3" method="post" action="/Survey/EmailSurveyCollection" data-survey-form="" target="_blank">
    <div class="nhsuk-error-summary" data-feedback-error="" data-test-id="feedback-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
      <h2 class="nhsuk-error-summary__title" id="error-summary-title">
        There is a problem
      </h2>
      <div class="nhsuk-error-summary__body">
        <ul class="nhsuk-list nhsuk-error-summary__list">
          <li>
            <a href="#email">undefined</a>
          </li>
        </ul>
      </div>
    </div>
<input name="data-1" value="value-1">
<input name="data-2" value="value-2">

<div class="nhsuk-form-group nhsuk-u-margin-bottom-0" data-survey-form-section="">
    <p>We would like to know more about your experience using 111 online.</p>

    <p>We will send you a link to a survey in 2 days.</p>

    <p>This is so you can get the help you need before completing the survey.</p>

    <fieldset class="nhsuk-fieldset">
        <div class="nhsuk-form-group nhsuk-form-group--error">
            <label class="nhsuk-label nhsuk-u-font-weight-bold" for="email">
                Enter your email address
            </label><span data-feedback-error="" data-test-id="feedback-error-message" class="nhsuk-error-message" id="email-error">
      <span class="nhsuk-u-visually-hidden">Error:</span> undefined
    </span>
            <input class="nhsuk-input nhsuk-u-width-one-half" id="email" name="EmailAddress" type="email" inputmode="email" aria-describedby=" email-error">
        </div>
    </fieldset>

    <button class="nhsuk-button nhsuk-u-margin-top-4" data-email-survey-cancel="" type="submit">Send</button>
    <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4" data-email-survey-submit="" type="submit">Send</button>
    <p data-feedback-nojs-message="">(Opens in a new tab or window)</p>
</div>
</form>"
`;

exports[`email survey submitEmail method when data from response is valid displays success content 1`] = `
"<form class="nhsuk-u-margin-top-3" method="post" action="/Survey/EmailSurveyCollection" data-survey-form="" target="_blank">
<input name="data-1" value="value-1">
<input name="data-2" value="value-2">

<div class="nhsuk-form-group nhsuk-u-margin-bottom-0" data-survey-form-section="" hidden="">
    <p>We would like to know more about your experience using 111 online.</p>

    <p>We will send you a link to a survey in 2 days.</p>

    <p>This is so you can get the help you need before completing the survey.</p>

    <fieldset class="nhsuk-fieldset">
        <div class="nhsuk-form-group">
            <label class="nhsuk-label nhsuk-u-font-weight-bold" for="email">
                Enter your email address
            </label>
            <input class="nhsuk-input nhsuk-u-width-one-half" id="email" name="EmailAddress" type="email" inputmode="email">
        </div>
    </fieldset>

    <button class="nhsuk-button nhsuk-u-margin-top-4" data-email-survey-cancel="" type="submit">Send</button>
    <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4" data-email-survey-submit="" type="submit" disabled="">Send</button>
    <p data-feedback-nojs-message="">(Opens in a new tab or window)</p>
</div><h3>Help Improve 111</h3><p tabindex="-1" class="nhsuk-u-margin-bottom-0 app-u-no-focus-outline" data-test-id="survey-response">We have successfully sent your survey</p>
</form>"
`;
